; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_utf8_utils.c_convert_language.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_utf8_utils.c_convert_language.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @convert_language(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %147 [
    i32 113, label %5
    i32 119, label %6
    i32 101, label %7
    i32 114, label %8
    i32 116, label %9
    i32 121, label %10
    i32 117, label %11
    i32 105, label %12
    i32 111, label %13
    i32 112, label %14
    i32 91, label %15
    i32 93, label %16
    i32 97, label %17
    i32 115, label %18
    i32 100, label %19
    i32 102, label %20
    i32 103, label %21
    i32 104, label %22
    i32 106, label %23
    i32 107, label %24
    i32 108, label %25
    i32 59, label %26
    i32 39, label %27
    i32 122, label %28
    i32 120, label %29
    i32 99, label %30
    i32 118, label %31
    i32 98, label %32
    i32 110, label %33
    i32 109, label %34
    i32 44, label %35
    i32 46, label %36
    i32 96, label %37
    i32 81, label %38
    i32 87, label %39
    i32 69, label %40
    i32 82, label %41
    i32 84, label %42
    i32 89, label %43
    i32 85, label %44
    i32 73, label %45
    i32 79, label %46
    i32 80, label %47
    i32 123, label %48
    i32 125, label %49
    i32 65, label %50
    i32 83, label %51
    i32 68, label %52
    i32 70, label %53
    i32 71, label %54
    i32 72, label %55
    i32 74, label %56
    i32 75, label %57
    i32 76, label %58
    i32 58, label %59
    i32 34, label %60
    i32 90, label %61
    i32 88, label %62
    i32 67, label %63
    i32 86, label %64
    i32 66, label %65
    i32 78, label %66
    i32 77, label %67
    i32 60, label %68
    i32 62, label %69
    i32 126, label %70
    i32 1081, label %71
    i32 1094, label %72
    i32 1091, label %73
    i32 1082, label %74
    i32 1077, label %75
    i32 1085, label %76
    i32 1075, label %77
    i32 1096, label %78
    i32 1097, label %79
    i32 1079, label %80
    i32 1093, label %81
    i32 1098, label %82
    i32 1092, label %83
    i32 1099, label %84
    i32 1074, label %85
    i32 1072, label %86
    i32 1087, label %87
    i32 1088, label %88
    i32 1086, label %89
    i32 1083, label %90
    i32 1076, label %91
    i32 1078, label %92
    i32 1101, label %93
    i32 1103, label %94
    i32 1095, label %95
    i32 1089, label %96
    i32 1084, label %97
    i32 1080, label %98
    i32 1090, label %99
    i32 1100, label %100
    i32 1073, label %101
    i32 1102, label %102
    i32 1105, label %103
    i32 1049, label %104
    i32 1062, label %105
    i32 1059, label %106
    i32 1050, label %107
    i32 1045, label %108
    i32 1053, label %109
    i32 1043, label %110
    i32 1064, label %111
    i32 1065, label %112
    i32 1047, label %113
    i32 1061, label %114
    i32 1066, label %115
    i32 1060, label %116
    i32 1067, label %117
    i32 1042, label %118
    i32 1040, label %119
    i32 1055, label %120
    i32 1056, label %121
    i32 1054, label %122
    i32 1051, label %123
    i32 1044, label %124
    i32 1046, label %125
    i32 1069, label %126
    i32 1071, label %127
    i32 1063, label %128
    i32 1057, label %129
    i32 1052, label %130
    i32 1048, label %131
    i32 1058, label %132
    i32 1068, label %133
    i32 1041, label %134
    i32 1070, label %135
    i32 1025, label %136
    i32 48, label %137
    i32 49, label %138
    i32 50, label %139
    i32 51, label %140
    i32 52, label %141
    i32 53, label %142
    i32 54, label %143
    i32 55, label %144
    i32 56, label %145
    i32 57, label %146
  ]

5:                                                ; preds = %1
  store i32 1081, i32* %2, align 4
  br label %153

6:                                                ; preds = %1
  store i32 1094, i32* %2, align 4
  br label %153

7:                                                ; preds = %1
  store i32 1091, i32* %2, align 4
  br label %153

8:                                                ; preds = %1
  store i32 1082, i32* %2, align 4
  br label %153

9:                                                ; preds = %1
  store i32 1077, i32* %2, align 4
  br label %153

10:                                               ; preds = %1
  store i32 1085, i32* %2, align 4
  br label %153

11:                                               ; preds = %1
  store i32 1075, i32* %2, align 4
  br label %153

12:                                               ; preds = %1
  store i32 1096, i32* %2, align 4
  br label %153

13:                                               ; preds = %1
  store i32 1097, i32* %2, align 4
  br label %153

14:                                               ; preds = %1
  store i32 1079, i32* %2, align 4
  br label %153

15:                                               ; preds = %1
  store i32 1093, i32* %2, align 4
  br label %153

16:                                               ; preds = %1
  store i32 1098, i32* %2, align 4
  br label %153

17:                                               ; preds = %1
  store i32 1092, i32* %2, align 4
  br label %153

18:                                               ; preds = %1
  store i32 1099, i32* %2, align 4
  br label %153

19:                                               ; preds = %1
  store i32 1074, i32* %2, align 4
  br label %153

20:                                               ; preds = %1
  store i32 1072, i32* %2, align 4
  br label %153

21:                                               ; preds = %1
  store i32 1087, i32* %2, align 4
  br label %153

22:                                               ; preds = %1
  store i32 1088, i32* %2, align 4
  br label %153

23:                                               ; preds = %1
  store i32 1086, i32* %2, align 4
  br label %153

24:                                               ; preds = %1
  store i32 1083, i32* %2, align 4
  br label %153

25:                                               ; preds = %1
  store i32 1076, i32* %2, align 4
  br label %153

26:                                               ; preds = %1
  store i32 1078, i32* %2, align 4
  br label %153

27:                                               ; preds = %1
  store i32 1101, i32* %2, align 4
  br label %153

28:                                               ; preds = %1
  store i32 1103, i32* %2, align 4
  br label %153

29:                                               ; preds = %1
  store i32 1095, i32* %2, align 4
  br label %153

30:                                               ; preds = %1
  store i32 1089, i32* %2, align 4
  br label %153

31:                                               ; preds = %1
  store i32 1084, i32* %2, align 4
  br label %153

32:                                               ; preds = %1
  store i32 1080, i32* %2, align 4
  br label %153

33:                                               ; preds = %1
  store i32 1090, i32* %2, align 4
  br label %153

34:                                               ; preds = %1
  store i32 1100, i32* %2, align 4
  br label %153

35:                                               ; preds = %1
  store i32 1073, i32* %2, align 4
  br label %153

36:                                               ; preds = %1
  store i32 1102, i32* %2, align 4
  br label %153

37:                                               ; preds = %1
  store i32 1105, i32* %2, align 4
  br label %153

38:                                               ; preds = %1
  store i32 1049, i32* %2, align 4
  br label %153

39:                                               ; preds = %1
  store i32 1062, i32* %2, align 4
  br label %153

40:                                               ; preds = %1
  store i32 1059, i32* %2, align 4
  br label %153

41:                                               ; preds = %1
  store i32 1050, i32* %2, align 4
  br label %153

42:                                               ; preds = %1
  store i32 1045, i32* %2, align 4
  br label %153

43:                                               ; preds = %1
  store i32 1053, i32* %2, align 4
  br label %153

44:                                               ; preds = %1
  store i32 1043, i32* %2, align 4
  br label %153

45:                                               ; preds = %1
  store i32 1064, i32* %2, align 4
  br label %153

46:                                               ; preds = %1
  store i32 1065, i32* %2, align 4
  br label %153

47:                                               ; preds = %1
  store i32 1047, i32* %2, align 4
  br label %153

48:                                               ; preds = %1
  store i32 1061, i32* %2, align 4
  br label %153

49:                                               ; preds = %1
  store i32 1066, i32* %2, align 4
  br label %153

50:                                               ; preds = %1
  store i32 1060, i32* %2, align 4
  br label %153

51:                                               ; preds = %1
  store i32 1067, i32* %2, align 4
  br label %153

52:                                               ; preds = %1
  store i32 1042, i32* %2, align 4
  br label %153

53:                                               ; preds = %1
  store i32 1040, i32* %2, align 4
  br label %153

54:                                               ; preds = %1
  store i32 1055, i32* %2, align 4
  br label %153

55:                                               ; preds = %1
  store i32 1056, i32* %2, align 4
  br label %153

56:                                               ; preds = %1
  store i32 1054, i32* %2, align 4
  br label %153

57:                                               ; preds = %1
  store i32 1051, i32* %2, align 4
  br label %153

58:                                               ; preds = %1
  store i32 1044, i32* %2, align 4
  br label %153

59:                                               ; preds = %1
  store i32 1046, i32* %2, align 4
  br label %153

60:                                               ; preds = %1
  store i32 1069, i32* %2, align 4
  br label %153

61:                                               ; preds = %1
  store i32 1071, i32* %2, align 4
  br label %153

62:                                               ; preds = %1
  store i32 1063, i32* %2, align 4
  br label %153

63:                                               ; preds = %1
  store i32 1057, i32* %2, align 4
  br label %153

64:                                               ; preds = %1
  store i32 1052, i32* %2, align 4
  br label %153

65:                                               ; preds = %1
  store i32 1048, i32* %2, align 4
  br label %153

66:                                               ; preds = %1
  store i32 1058, i32* %2, align 4
  br label %153

67:                                               ; preds = %1
  store i32 1068, i32* %2, align 4
  br label %153

68:                                               ; preds = %1
  store i32 1041, i32* %2, align 4
  br label %153

69:                                               ; preds = %1
  store i32 1070, i32* %2, align 4
  br label %153

70:                                               ; preds = %1
  store i32 1025, i32* %2, align 4
  br label %153

71:                                               ; preds = %1
  store i32 113, i32* %2, align 4
  br label %153

72:                                               ; preds = %1
  store i32 119, i32* %2, align 4
  br label %153

73:                                               ; preds = %1
  store i32 101, i32* %2, align 4
  br label %153

74:                                               ; preds = %1
  store i32 114, i32* %2, align 4
  br label %153

75:                                               ; preds = %1
  store i32 116, i32* %2, align 4
  br label %153

76:                                               ; preds = %1
  store i32 121, i32* %2, align 4
  br label %153

77:                                               ; preds = %1
  store i32 117, i32* %2, align 4
  br label %153

78:                                               ; preds = %1
  store i32 105, i32* %2, align 4
  br label %153

79:                                               ; preds = %1
  store i32 111, i32* %2, align 4
  br label %153

80:                                               ; preds = %1
  store i32 112, i32* %2, align 4
  br label %153

81:                                               ; preds = %1
  store i32 91, i32* %2, align 4
  br label %153

82:                                               ; preds = %1
  store i32 93, i32* %2, align 4
  br label %153

83:                                               ; preds = %1
  store i32 97, i32* %2, align 4
  br label %153

84:                                               ; preds = %1
  store i32 115, i32* %2, align 4
  br label %153

85:                                               ; preds = %1
  store i32 100, i32* %2, align 4
  br label %153

86:                                               ; preds = %1
  store i32 102, i32* %2, align 4
  br label %153

87:                                               ; preds = %1
  store i32 103, i32* %2, align 4
  br label %153

88:                                               ; preds = %1
  store i32 104, i32* %2, align 4
  br label %153

89:                                               ; preds = %1
  store i32 106, i32* %2, align 4
  br label %153

90:                                               ; preds = %1
  store i32 107, i32* %2, align 4
  br label %153

91:                                               ; preds = %1
  store i32 108, i32* %2, align 4
  br label %153

92:                                               ; preds = %1
  store i32 59, i32* %2, align 4
  br label %153

93:                                               ; preds = %1
  store i32 39, i32* %2, align 4
  br label %153

94:                                               ; preds = %1
  store i32 122, i32* %2, align 4
  br label %153

95:                                               ; preds = %1
  store i32 120, i32* %2, align 4
  br label %153

96:                                               ; preds = %1
  store i32 99, i32* %2, align 4
  br label %153

97:                                               ; preds = %1
  store i32 118, i32* %2, align 4
  br label %153

98:                                               ; preds = %1
  store i32 98, i32* %2, align 4
  br label %153

99:                                               ; preds = %1
  store i32 110, i32* %2, align 4
  br label %153

100:                                              ; preds = %1
  store i32 109, i32* %2, align 4
  br label %153

101:                                              ; preds = %1
  store i32 44, i32* %2, align 4
  br label %153

102:                                              ; preds = %1
  store i32 46, i32* %2, align 4
  br label %153

103:                                              ; preds = %1
  store i32 96, i32* %2, align 4
  br label %153

104:                                              ; preds = %1
  store i32 81, i32* %2, align 4
  br label %153

105:                                              ; preds = %1
  store i32 87, i32* %2, align 4
  br label %153

106:                                              ; preds = %1
  store i32 69, i32* %2, align 4
  br label %153

107:                                              ; preds = %1
  store i32 82, i32* %2, align 4
  br label %153

108:                                              ; preds = %1
  store i32 84, i32* %2, align 4
  br label %153

109:                                              ; preds = %1
  store i32 89, i32* %2, align 4
  br label %153

110:                                              ; preds = %1
  store i32 85, i32* %2, align 4
  br label %153

111:                                              ; preds = %1
  store i32 73, i32* %2, align 4
  br label %153

112:                                              ; preds = %1
  store i32 79, i32* %2, align 4
  br label %153

113:                                              ; preds = %1
  store i32 80, i32* %2, align 4
  br label %153

114:                                              ; preds = %1
  store i32 123, i32* %2, align 4
  br label %153

115:                                              ; preds = %1
  store i32 125, i32* %2, align 4
  br label %153

116:                                              ; preds = %1
  store i32 65, i32* %2, align 4
  br label %153

117:                                              ; preds = %1
  store i32 83, i32* %2, align 4
  br label %153

118:                                              ; preds = %1
  store i32 68, i32* %2, align 4
  br label %153

119:                                              ; preds = %1
  store i32 70, i32* %2, align 4
  br label %153

120:                                              ; preds = %1
  store i32 71, i32* %2, align 4
  br label %153

121:                                              ; preds = %1
  store i32 72, i32* %2, align 4
  br label %153

122:                                              ; preds = %1
  store i32 74, i32* %2, align 4
  br label %153

123:                                              ; preds = %1
  store i32 75, i32* %2, align 4
  br label %153

124:                                              ; preds = %1
  store i32 76, i32* %2, align 4
  br label %153

125:                                              ; preds = %1
  store i32 58, i32* %2, align 4
  br label %153

126:                                              ; preds = %1
  store i32 34, i32* %2, align 4
  br label %153

127:                                              ; preds = %1
  store i32 90, i32* %2, align 4
  br label %153

128:                                              ; preds = %1
  store i32 88, i32* %2, align 4
  br label %153

129:                                              ; preds = %1
  store i32 67, i32* %2, align 4
  br label %153

130:                                              ; preds = %1
  store i32 86, i32* %2, align 4
  br label %153

131:                                              ; preds = %1
  store i32 66, i32* %2, align 4
  br label %153

132:                                              ; preds = %1
  store i32 78, i32* %2, align 4
  br label %153

133:                                              ; preds = %1
  store i32 77, i32* %2, align 4
  br label %153

134:                                              ; preds = %1
  store i32 60, i32* %2, align 4
  br label %153

135:                                              ; preds = %1
  store i32 62, i32* %2, align 4
  br label %153

136:                                              ; preds = %1
  store i32 126, i32* %2, align 4
  br label %153

137:                                              ; preds = %1
  store i32 48, i32* %2, align 4
  br label %153

138:                                              ; preds = %1
  store i32 49, i32* %2, align 4
  br label %153

139:                                              ; preds = %1
  store i32 50, i32* %2, align 4
  br label %153

140:                                              ; preds = %1
  store i32 51, i32* %2, align 4
  br label %153

141:                                              ; preds = %1
  store i32 52, i32* %2, align 4
  br label %153

142:                                              ; preds = %1
  store i32 53, i32* %2, align 4
  br label %153

143:                                              ; preds = %1
  store i32 54, i32* %2, align 4
  br label %153

144:                                              ; preds = %1
  store i32 55, i32* %2, align 4
  br label %153

145:                                              ; preds = %1
  store i32 56, i32* %2, align 4
  br label %153

146:                                              ; preds = %1
  store i32 57, i32* %2, align 4
  br label %153

147:                                              ; preds = %1
  %148 = load i32, i32* %3, align 4
  %149 = icmp uge i32 %148, 128
  br i1 %149, label %150, label %152

150:                                              ; preds = %147
  %151 = load i32, i32* %3, align 4
  store i32 %151, i32* %2, align 4
  br label %153

152:                                              ; preds = %147
  store i32 32, i32* %2, align 4
  br label %153

153:                                              ; preds = %152, %150, %146, %145, %144, %143, %142, %141, %140, %139, %138, %137, %136, %135, %134, %133, %132, %131, %130, %129, %128, %127, %126, %125, %124, %123, %122, %121, %120, %119, %118, %117, %116, %115, %114, %113, %112, %111, %110, %109, %108, %107, %106, %105, %104, %103, %102, %101, %100, %99, %98, %97, %96, %95, %94, %93, %92, %91, %90, %89, %88, %87, %86, %85, %84, %83, %82, %81, %80, %79, %78, %77, %76, %75, %74, %73, %72, %71, %70, %69, %68, %67, %66, %65, %64, %63, %62, %61, %60, %59, %58, %57, %56, %55, %54, %53, %52, %51, %50, %49, %48, %47, %46, %45, %44, %43, %42, %41, %40, %39, %38, %37, %36, %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %154 = load i32, i32* %2, align 4
  ret i32 %154
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
